--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/about.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/about.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -52,31 +53,31 @@
   </header>
 
   <section>
-    <div class="title">
+    <div class="title about_title">
       <h1>新しい教育の常識を作り多くの人々に幸せを届ける</h1>
       <p>estraが大切にすることは、教育のDX化で日本の教育を変革すること。<br>
       日本の教育にコーチングを普及し、自発的に目標達成ができる人材を育成する。</p>
     </div>
     <div>
-      <h2>私たちが大切にしている3つの事</h2>
+      <h2 class="about_title_menu">私たちが大切にしている3つの事</h2>
       <div class="about_content">
         <img src="about1.png" alt="失敗を恐れないイメージ">
         <div>
-          <h3>1.失敗を恐れない</h3>
+          <h3 class="about_text2">1.失敗を恐れない</h3>
           <p>私たちが大切にしている「成長」のためには失敗は必要です。</p>
         </div>
       </div>
       <div class="about_content">
         <img src="about2.png" alt="失敗を恐れないイメージ">
         <div>
-          <h3>2.オープンなコミュニケーション</h3>
+          <h3 class="about_text2">2.オープンなコミュニケーション</h3>
           <p>組織の成長のためなら、時には厳しいことも発言することが重要です。若いメンバーで構成されていることもあり、気軽に誰とでも話せる環境です。</p>
         </div>
       </div>
       <div class="about_content">
         <img src="about3.png" alt="失敗を恐れないイメージ">
         <div>
-          <h3>3.メンバーの多様性</h3>
+          <h3 class="about_text2">3.メンバーの多様性</h3>
           <p>男女問わず、学生〜社会人まで様々なバックグラウンドを持ったメンバーが働いています。</p>
         </div>
       </div>
@@ -86,7 +87,7 @@
 <footer>
   <div class="footer_menu">
     <div>
-      <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
     </div>
     <div class="footer_list">
       <ul>
