--- a/interview.html
+++ b/interview.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/interview.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/interview.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
 <body>
   
 <header>
-  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+  <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
   <nav class="header-nav">
     <ul>
       <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -57,7 +58,7 @@
       <p>Interview</p>
     </div>
 
-    <main>
+    <main class="interview_main">
       <a href="interview1.html">
         <div class="interview_content">
           <img src="interview1.png" alt="インタビュー">
@@ -105,7 +106,7 @@
   <footer>
     <div class="footer_menu">
       <div>
-        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+        <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
       </div>
       <div class="footer_list">
         <ul>
