--- a/news.html
+++ b/news.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/news.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/news.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -26,7 +27,7 @@
         <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
       </ul>
     </nav>
-  
+
     <div class="menu" id="menu">
       <span class="menu-line-top"></span>
       <span class="menu-line-middle"></span>
@@ -48,89 +49,108 @@
         <li class="drawer-nav-item"><a href="privacy.html">プライバシーポリシー</a></li>
       </ul>
     </nav>
-  
+
   </header>
   <section>
     <div class="title">
       <h1>ニュース</h1>
     </div>
 
-    <div class="news_list">
-      <ul>
-        <li>
-          <div>
-            <p>corporate</p>
-            <h2>株主総会に関するお問い合わせについて</h2>
-          </div>
-        </li>
-        <li>
-          <div>
-            <p>corporate</p>
-            <h2>記入内容の確認後、2~3営業日以内にご連絡させていただきます。</h2>
-          </div>
-        </li>
-        <li>
-          <div>
-            <p>corporate</p>
-            <h2>新型コロナウイルス感染症に関する対応について</h2>
-          </div>
-        </li>
-        <li>
-          <div>
-            <p>corporate</p>
-            <h2>在宅期間勤務延長のお知らせ</h2>
-          </div>
-        </li>
-        <li>
-          <div>
-            <p>corporate</p>
-            <h2>コーポレートサイトリニューアルのお知らせ</h2>
-          </div>
-        </li>
-        <li>
-          <div>
-            <p>corporate</p>
-            <a href="news1.html"><h2>estra 新代々木オフィス昨年12月に移転しました</h2></a>
-          </div>
-        </li>
-      </ul>
+    <div id="news" class="wrap">
+      <div class="news-contain">
+        <ul>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="" class="news-title">
+              株主総会に関するお問い合わせについて
+            </a>
+          </li>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="" class="news-title">
+              記入内容の確認後、2~3営業日以内にご連絡させていただきます。
+            </a>
+          </li>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="" class="news-title">
+              新型コロナウイルス感染症に関する対応について
+            </a>
+          </li>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="" class="news-title">
+              在宅期間勤務延長のお知らせ
+            </a>
+          </li>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="" class="news-title">
+              コーポレートサイトリニューアルのお知らせ
+            </a>
+          </li>
+          <li class="news-list">
+            <p class="news-date">2020/01/01</p>
+            <p class="news-category">
+              new
+            </p>
+            <a href="news1.html" class="news-title">
+              estra 新代々木オフィス昨年12月に移転しました！
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-
   </section>
-<footer>
-  <div class="footer_menu">
+  <footer>
+    <div class="footer_menu">
+      <div>
+        <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      </div>
+      <div class="footer_list">
+        <ul>
+          <li><a href="about.html">私たちについて</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
+          <li><a href="company.html">会社概要</a></li>
+          <li><a href="member.html">メンバー</a></li>
+        </ul>
+        <ul>
+          <li><a href="news.html">ニュース一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="service.html">サービス一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="recruit.html">採用情報</a></li>
+          <li><a href="environment.html">働く環境</a></li>
+          <li><a href="interview.html">インタビュー一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="contact.html">お問い合わせ</a></li>
+        </ul>
+      </div>
+    </div>
     <div>
-      <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
-    <div class="footer_list">
-      <ul>
-        <li><a href="about.html">私たちについて</a></li>
-        <li><a href="greeting.html">代表挨拶</a></li>
-        <li><a href="philosophy.html">経営理念</a></li>
-        <li><a href="company.html">会社概要</a></li>
-        <li><a href="member.html">メンバー</a></li>
-      </ul>
-      <ul>
-        <li><a href="news.html">ニュース一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="service.html">サービス一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="recruit.html">採用情報</a></li>
-        <li><a href="environment.html">働く環境</a></li>
-        <li><a href="interview.html">インタビュー一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="contact.html">お問い合わせ</a></li>
-      </ul>
-    </div>
-  </div>
-  <div>
-    <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
-  </div>
-</footer>
-<script src="js/main.js"></script>
+  </footer>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
