--- a/philosophy.html
+++ b/philosophy.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/philosophy.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/philosophy.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
 <header>
-  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+  <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
   <nav class="header-nav">
     <ul>
       <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -58,28 +59,28 @@
  
     <div class="philosophy_content">
       <div>
-        <h2>Mission</h2>
+        <h2 class="philosophy_content_title">Mission</h2>
       </div>
       <div>
-        <p>全ての人の成長にコミットする</p>
-      </div>
-    </div>
-
-    <div class="philosophy_content">
-      <div>
-        <h2>Vision</h2>
-      </div>
-      <div>
-        <p>教育業界を変革する　-Transform the education industry-</p>
+        <p class="philosophy_text">全ての人の成長にコミットする</p>
       </div>
     </div>
 
     <div class="philosophy_content">
       <div>
-        <h2>Value</h2>
+        <h2 class="philosophy_content_title">Vision</h2>
       </div>
       <div>
-        <p>限界を決めるな　-No limits-
+        <p class="philosophy_text">教育業界を変革する　-Transform the education industry-</p>
+      </div>
+    </div>
+
+    <div class="philosophy_content">
+      <div>
+        <h2 class="philosophy_content_title">Value</h2>
+      </div>
+      <div>
+        <p class="philosophy_text">限界を決めるな　-No limits-
         <br>思いっきり楽しめ　-Play hard-
         <br>プロフェッショナルであれ　-Be professional-</p>
       </div>
@@ -87,10 +88,10 @@
 
     <div class="philosophy_content">
       <div>
-        <h2>企業名由来</h2>
+        <h2 class="philosophy_content_title">企業名由来</h2>
       </div>
       <div>
-        <p>世界的に遅れを取っている日本の教育業界に新たな教育戦略を取り入れ、教育業界を変革するという想いが込められている。
+        <p class="philosophy_text">世界的に遅れを取っている日本の教育業界に新たな教育戦略を取り入れ、教育業界を変革するという想いが込められている。
         <br>-Education×Strategy
         -</p>
       </div>
@@ -99,7 +100,7 @@
 <footer>
   <div class="footer_menu">
     <div>
-      <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
     </div>
     <div class="footer_list">
       <ul>
