--- a/service.html
+++ b/service.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/service.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/service.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -67,13 +68,13 @@
         </p>
       </div>
       <div class="content">
-        <h2>COACHTECH3つの特徴</h2>
+        <h2 class="service_content_title">COACHTECH3つの特徴</h2>
         <p>1.スキルレベルを最短で高めるオーダーメイドカリキュラム<br>
           2.現役エンジニアの専属コーチが学習サポート<br>
           3.エラーや疑問点をすぐに解決できる質問チャットサポート</p>
       </div>
       <div class="content">
-        <h2>数字で見る「COACHTECH」</h2>
+        <h2 class="service_content_title">数字で見る「COACHTECH」</h2>
         <p>
           ・累計生徒様数200名突破<br>
           ・挫折率3%<br>
@@ -84,7 +85,7 @@
         <div>
           <img src="stagee.png" alt="教育機関向け業務効率化ツールstagee">
         </div>
-        <h3>Stageee</h3>
+        <h3 class="service_stageee">Stageee</h3>
         <p>
           日本の教育課題は民間企業だからこそ解決できるものがあると信じています。<br>
           Stageeeはestra創業前からずっと同じサービス名で開発を進め、何度もピボットを繰り返しています。<br>
@@ -99,7 +100,7 @@
   <footer>
     <div class="footer_menu">
       <div>
-        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+        <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
       </div>
       <div class="footer_list">
         <ul>
