--- a/company.html
+++ b/company.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/company.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/company.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
 <header>
-  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+  <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
   <nav class="header-nav">
     <ul>
       <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -54,17 +55,17 @@
     <div class="title">
       <h1>会社概要</h1>
     </div>
-    <div class="table">
+    <div class="company_table">
       <table>
-        <tr>
+        <tr class="company_table_tr">
           <th>企業名</th>
           <td>株式会社estra</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>設立</th>
           <td>2019/11/01</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>所在地</th>
           <td>
             <p>〒151-0051</p>
@@ -72,23 +73,23 @@
             <p>第7瑞穂ビル4階</p>
           </td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>従業員数</th>
           <td>56名(社員6名、業務委託40名、インターン生10名)</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>事業内容</th>
           <td>教育関連サービス</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>取引先銀行</th>
           <td>三井住友銀行、りそな銀行</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>資本金</th>
           <td>¥10,009,000(2020年11月29日現在)</td>
         </tr>
-        <tr>
+        <tr class="company_table_tr">
           <th>役員</th>
           <td>山田太郎</td>
         </tr>
@@ -99,7 +100,7 @@
 <footer>
   <div class="footer_menu">
     <div>
-      <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
     </div>
     <div class="footer_list">
       <ul>
