--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/contact.css">
-  <link rel="stylesheet" href="css/top.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/contact.css"> -->
+  <!-- <link rel="stylesheet" href="css/top.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -58,7 +59,7 @@
     </div>
 
     <div class="title2">
-      <h2>
+      <h2 class="contact_title">
         フォームからのお問い合わせ
       </h2>
       <p>
@@ -112,7 +113,7 @@
   <footer>
     <div class="footer_menu">
       <div>
-        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+        <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
       </div>
       <div class="footer_list">
         <ul>
