--- a/interview1.html
+++ b/interview1.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/interview1.css">
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <!-- <link rel="stylesheet" href="css/interview1.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -57,7 +58,7 @@
       </div>
 
       <div class="interview1">
-        <h2>営業戦略部　営業第一チーム<br>山本太郎<br>2020年12月入社</h2>
+        <h2 class="interview1_text_content">営業戦略部　営業第一チーム<br>山本太郎<br>2020年12月入社</h2>
         <div>
           <p>働きやすい環境を全力で作る</p>
           <img src="interview1.png" alt="山本太郎">
@@ -70,7 +71,7 @@
   <footer>
     <div class="footer_menu">
       <div>
-        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+  <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
       </div>
       <div class="footer_list">
         <ul>
