--- a/member.html
+++ b/member.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/member.css">
-  <link rel="stylesheet" href="css/common.css">
+  <!-- <link rel="stylesheet" href="css/member.css"> -->
+  <!-- <link rel="stylesheet" href="css/common.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
   <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <a href="index.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
     <nav class="header-nav">
       <ul>
         <li><a href="about.html">About<br><span>私たちについて</span></a></li>
@@ -56,7 +57,7 @@
         <h1>役員</h1>
       </div>
    
-      <div class="content">
+      <div class="member_content">
         <div class="member_list">
           <div class="member">
             <p class="position">代表取締役CEO</p>
@@ -100,7 +101,7 @@
   <footer>
     <div class="footer_menu">
       <div>
-        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+        <a href="index.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
       </div>
       <div class="footer_list">
         <ul>
